--- a/s.css
+++ b/s.css
@@ -16,18 +16,22 @@ body {
   background-color: yellow;
   overflow: hidden;
 }
-#w li {
+li {
   display: block;
   width: 50px;
   height: 50px;
   float: left;
+ /* outline: 1px solid grey;*/
 }
-#w li:nth-child(3n) {
+li:nth-child(3n) {
   background-color: red;
 }
-#w li:nth-child(3n-1) {
+li:nth-child(3n-1) {
   background-color: blue;
 }
-#w li:nth-child(3n-2) {
+li:nth-child(3n-2) {
   background-color: green;
+}
+#p {
+  background-color: orange;
 }
